<resources>
    <string name="app_name">Yellow</string>

    <string name="profile_title">Profile</string>
    <string name="notifications_title">Notification</string>
    <string name="main_page_title">Event Hub</string>

    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_optional">Phone Number (optional)</string>

    <string name="qr_text">Point the camera at a QR code</string>
    <string name="qr_scan_title">QR Scanner</string>

    <string name="history_title">Event History</string>

    <string name="save_changes">Save Changes</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="delete_warning">This action cannot be undone.</string>

    <string name="admin_settings">Admin Settings</string>
    <string name="open_admin_dashboard">Open Admin Dashboard</string>

    <string name="profile_avatar_desc">Profile avatar</string>
    <string name="edit_avatar_desc">Edit profile picture</string>
    <string name="delete_icon_desc">Delete</string>

    <string name="congratulation_text">Congratulations! You have been selected to attend the Summer Music Festival on Oct 20, 2025.</string>

    <string name="notif_title_selected">Selected for %1$s</string>
    <string name="notif_title_not_selected">Not Selected for %1$s</string>
    <string name="notif_msg_selected">Congratulations! You have been selected to attend %1$s on %2$s.</string>
    <string name="notif_msg_not_selected">Unfortunately, you were not selected for %1$s. Better luck next time!</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="view_event_details">View Event Details</string>

    <!--For Create Event Activity-->
    <string name="upload_poster">Tap to upload poster</string>
    <string name="create_event">Create Event</string>
    <string name="select_registration_date">Registration Dates</string>
    <string name="select_event_date">Event Dates</string>
    <string name="require_geolocation">Require Geolocation</string>
    <string name="track_entrant_location">Track entrant locations</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="max_entrants">Maximum Entrants (Optional)</string>

    <string name="qr_code">Event QR Code</string>
    <string name="qr_code_manual">Attendees can scan this to view event details or check in.</string>
    <string name="share_qr_code">Share QR Code</string>

    <string name="event_poster_update">Edit Event Poster</string>
    <string name="manage_entrants">Manage Entrants</string>
    <string name="event_details">Event Details</string>
    <string name="lottery_criteria">
        • Participants are randomly selected after registration closes.\n\n
        • Selected Entrants are randomly selected through the app.\n\n
        • You have 24 hours to accept or decline your spot.\n\n
        • Declining frees your spot for another entrant.
    </string>
    <string name="placeholder">placeholder image</string>
    <string name="test_description">Join us for an unforgettable evening of live music under the stars. This annual festival features a lineup of incredible artists, delicious food trucks, and a vibrant atmosphere you won\'t want to miss</string>
    <string name="channel_name">Yellow Notifications</string>
    <string name="channel_description">Your Yellow notification is here!</string>
</resources>